<resources>
    <string name="app_name">SimpleNotesApp</string>
    <string name="button_login">Login</string>
    <string name="error">Error!</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="button">Log in</string>
    <string name="btn_new_note">Create new note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_note">Name of note</string>
    <string name="save">Save</string>
    <string name="note">Note</string>
</resources>